samples/_failures_safe/1761495411_aa671c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7c0ed55.c: In function ‘print_state_machine_status’:
./samples/SAFE/__tmp_d7c0ed55.c:153:11: error: expected ‘;’ at end of input
  153 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_d7c0ed55.c:153:5: error: expected declaration or statement at end of input
  153 |     printf
      |     ^~~~~~
